Further fixed the bug where the scroll locked class would cause the entire body content to move to the left, by limiting the fix to only be on mobile screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -140,6 +140,10 @@
   }
 }
 
-body[data-scroll-locked]{
-  min-width: 100%;
+@layer utilities {
+  @media (max-width: 480px) {
+    body[data-scroll-locked] {
+      min-width: 100%;
+    }
+  }
 }
